fix: contrast issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,7 @@
     --font-color: #323130;
     --font-color-2: #9197a3;
     --card-color: #fff;
-    --success-color: #22c55e;
+    --success-color: #166534;
     --error-color: #b91c1c;
     --notification-color: #f87171;
     --z-index-1: 1;
